--- a/css/rock.css
+++ b/css/rock.css
@@ -6,7 +6,11 @@ body {
   background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
+  height: 100vh;
+  overflow-y: auto;
+  position: fixed;
 }
+
 .title {
   font-size: 40px;
   font-weight: bold;
@@ -14,12 +18,14 @@ body {
   align-items: center;
   justify-content: center;
   color: black;
+  margin-left: 30px;
 }
 
 .move-icon {
   width: 50px;
   height: 50px;
 }
+
 .move-button {
   background-color: transparent;
   border: 3px solid rgba(0, 0, 0, 0.711);
@@ -30,6 +36,7 @@ body {
   margin-left: 30px;
   transition: 0.2s;
 }
+
 .move-button:hover {
   background-color: green;
 }
@@ -39,6 +46,7 @@ div {
   align-items: center;
   justify-content: center;
 }
+
 .result {
   font-size: 20px;
   font-weight: bold;
@@ -46,6 +54,7 @@ div {
   margin-left: 30px;
   color: black;
 }
+
 .score {
   margin-top: 50px;
   margin-left: 30px;
@@ -63,4 +72,29 @@ div {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   margin-left: 30px;
+  transition: all ease 0.2s;
+}
+.reset-button:hover {
+  background-color: rgb(7, 109, 80);
+  padding-left: 10px;
+}
+@media (max-width: 800px) {
+  /* Adjust styles for smaller screens (up to 768px) */
+  .move-button {
+    width: 80px;
+    height: 80px;
+    margin-left: 15px;
+  }
+
+  .result,
+  .score {
+    margin-top: 30px;
+    margin-left: 15px;
+  }
+
+  .reset-button {
+    width: 80px;
+    height: 40px;
+    margin-left: 15px;
+  }
 }
